generated/manifests/prod-axon/tuwunel/Service-tuwunel.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: tuwunel
    app.kubernetes.io/name: tuwunel
    app.kubernetes.io/service: tuwunel
  name: tuwunel
  namespace: matrix
spec:
  ports:
    - name: http
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: tuwunel
    app.kubernetes.io/name: tuwunel
  type: ClusterIP
