generated/manifests/prod-axon/tuwunel/HTTPRoute-tuwunel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tuwunel
  namespace: matrix
spec:
  hostnames:
    - matrix.gen.wtf
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: gen-wtf-https
  rules:
    - backendRefs:
        - name: tuwunel
          port: 8008
