generated/manifests/prod-axon/tuwunel/CiliumNetworkPolicy-allow-gateway-ingress-tuwunel.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-tuwunel
  namespace: matrix
spec:
  description: Allow Envoy Gateway proxies to reach tuwunel.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuwunel
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
