generated/manifests/prod-axon/tuwunel/CiliumNetworkPolicy-allow-internet-egress-tuwunel.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internet-egress-tuwunel
  namespace: matrix
spec:
  description: Allow tuwunel to reach kanidm and federation peers.
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8448"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuwunel
